# PlantSwap

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  fly.toml  log_config.json  pyproject.toml  requirements.txt
.github/workflows/: Unittests.YAML  Unittests.yml  publish_application_container.yml  publish_application_image.yml  test_compose.yml  tests.yml
app/: main.py  models.py
app-frontend/: package.json
app-frontend/public/: index.html  manifest.json
app-frontend/src/: App.js  api.js  charka_ui.js  utils.js
app-frontend/src/handlers/: auth_handler.js  image_upload_handlers.js  plant_handlers.js  trade_request_handler.js  user_handler.js
app-frontend/src/hooks/: is_logged_in_hook.js  list_all_plants_hook.js
app-frontend/src/pages/: security.js  top_bar.js
app-frontend/src/routers/main/: main_router.js
app-frontend/src/routers/main/pages/: plants.js
app-frontend/src/routers/not_found/: not_found_router.js
app-frontend/src/routers/plants/: plants_router.js
app-frontend/src/routers/plants/pages/: plants_list.js  plants_page.js
app/api/: dependencies.py  main.py
app/api/routers/: login.py  plants.py  requests.py  users.py
app/core/: config.py  crud.py  db.py  images.py  security.py
app/core/crud/: plants_crud.py  requests_crud.py  users_crud.py
app/tests/: conftest.py  test.env
app/tests/api/: test_dependencies.py  test_main.py
app/tests/api/routers/: test_login.py  test_plants.py  test_requests.py  test_users.py
app/tests/compose/: test_health.py
app/tests/core/: test_images.py  test_security.py
app/tests/core/crud/: test_plants_crud.py  test_requesets_crud.py
app/tests/utils/: plants.py  requests.py  users.py  utils.py
doc/milestone_1/: github_configuration.md  problem_description.md
docs/milestone_2/: README.md  continuous_integration.md  task_runner.md  task_runner_before_migration.md  testing_framework_and_assertion_library.md  visualization_of_continuous_integration.md  writing_tests.md
docs/milestone_3/: api_framework.md  design_of_api.md  logging.md  test_execution.md
docs/milestone_4/: 01_container_composition_setup.md  02_dockerfile_in_depth_explanation.md  03_compose_file_in_depth_explanation.md  04_automatically_publishing_images.md  05_automatically_testing_the_composition_of_containers.md
docs/milestone_5/: 01_deploying_the_application_to_the_cloud.md  02_continuous_deployment_using_github_actions.md  deploying_the_application_to_the_cloud.md  performance_benchmarking.md  tmp.md
