[tool.poetry]
name = "PlantSwap"
version = "0.2.0"
description = "WebApp to swap plants with other people"
authors = ["Raoul Luqué <raoulsluque@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
--doctest-modules --junitxml=reports/test-results.xml
--cov=app --cov-report=xml:reports/coverage-summary.xml
--cov-report=html:reports/html_dir
--cov-report=lcov:reports/lcov.info
--cov-report term-missing
"""
testpaths = [
    "app/tests",
]

[tool.coverage.run]
data_file = 'reports/.coverage'

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-cov = "5.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.7.0"
anyio = "4.6.2.post1"
bcrypt = "4.2.0"
certifi = "2024.8.30"
click = "8.1.7"
coverage = "7.6.4"
dnspython = "2.7.0"
email-validator = "2.2.0"
fastapi = "0.115.2"
fastapi-cli = "0.0.5"
greenlet = "3.1.1"
h11 = "0.14.0"
httpcore = "1.0.6"
httptools = "0.6.2"
httpx = "0.27.2"
idna = "3.10"
iniconfig = "2.0.0"
invoke = "2.2.0"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "3.0.1"
mdurl = "0.1.2"
packaging = "24.1"
passlib = "1.7.4"
pluggy = "1.5.0"
psycopg = "3.2.3"
psycopg-binary = "3.2.3"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
pygments = "2.18.0"
pyjwt = "2.9.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.12"
pyyaml = "6.0.2"
rich = "13.9.2"
shellingham = "1.5.4"
sniffio = "1.3.1"
sqlalchemy = "2.0.35"
sqlmodel = "0.0.22"
starlette = "0.40.0"
typer = "0.12.5"
typing-extensions = "4.12.2"
uvicorn = "0.31.1"
uvloop = "0.21.0"
watchfiles = "0.24.0"
websockets = "13.1"

